styles/style.css
@media only screen and (max-width: 992px) {
    .featured-stories {
        position: relative !important;
    }

    .in-the-mag {
        flex-flow: wrap !important;
    }

    .image-mag {
        display: none !important;
    }

    .bars {
        display: inline !important;
    }

    .nav-bottom li {
        border: none !important;
    }
}

@media only screen and (max-width: 576px) {
    .culture-travel-big,
    .bohemian {
        display: none !important;
    }

    .culture-travel-small {
        display: block !important;
    }
}

* {
    font-family: "Roboto Condensed", sans-serif;
}

.top-logo {
    fill: #fff;
}

.nav-logo {
    fill: #f72210;
}

.bars,
.culture-travel-small {
    display: none;
}

h5,
h6,
.navbar-nav li a,
.nav-bottom li a:hover {
    color: #000;
}

h5:hover {
    text-decoration: underline;
    text-decoration-color: #f72210;
}

.navbar-nav li a:hover,
a h6:hover {
    color: #f72210;
}

.image-tag {
    opacity: 0.8;
}

